@@ -56,6 +56,7 @@ TRIGDEC HLT_mu20_iloose_L1MU15 HLT_mu50
 
 SELECTION loose
 INITIAL
+COUNTHISTO
 GRL
 #TRIGDEC HLT_mu26_imedium 
 #TRIGMATCH HLT_mu26_imedium 
